--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,8 @@
 </div>	
 		
 		<div class="base-rodape">
-		<p>DIREITOS RESERVADOS MJAILTON.COM.BR</p>
+		<p>Feito Por Cezar Godoy e Isabela Duarte</p>
+		<p>IFSP Matéria PDWEL Profº UGO</p>
 </div>	</div>		
 </div>		
 </body>
