--- a/html/frm_cadastro.html
+++ b/html/frm_cadastro.html
@@ -66,10 +66,10 @@
 			</form>
 		</div>	
 </div>	
-		
-		<div class="base-rodape">
-		<p>DIREITOS RESERVADOS MJAILTON.COM.BR</p>
-</div>	</div>		
+<div class="base-rodape">
+		<p>Feito Por Cezar Godoy e Isabela Duarte</p>
+		<p>IFSP Matéria PDWEL Profº UGO</p>
+</div>	</div>			
 </div>		
 </body>
 </html>
