--- a/html/lst_contatos.html
+++ b/html/lst_contatos.html
@@ -108,8 +108,9 @@
 </div>	
 		
 		<div class="base-rodape">
-		<p>DIREITOS RESERVADOS MJAILTON.COM.BR</p>
-</div>	</div>		
+			<p>Feito Por Cezar Godoy e Isabela Duarte</p>
+			<p>IFSP Matéria PDWEL Profº UGO</p>
+	</div>	</div>			
 </div>		
 </body>
 </html>
